; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/gpu/drm/radeon/extr_atombios_encoders.c_radeon_atombios_set_dac_info.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/gpu/drm/radeon/extr_atombios_encoders.c_radeon_atombios_set_dac_info.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.radeon_encoder_atom_dac = type { i32 }
%struct.radeon_encoder = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { %struct.drm_device* }
%struct.drm_device = type { %struct.radeon_device* }
%struct.radeon_device = type { i32 }

@GFP_KERNEL = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.radeon_encoder_atom_dac* (%struct.radeon_encoder*)* @radeon_atombios_set_dac_info to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.radeon_encoder_atom_dac* @radeon_atombios_set_dac_info(%struct.radeon_encoder* %0) #0 {
  %2 = alloca %struct.radeon_encoder_atom_dac*, align 8
  %3 = alloca %struct.radeon_encoder*, align 8
  %4 = alloca %struct.drm_device*, align 8
  %5 = alloca %struct.radeon_device*, align 8
  %6 = alloca %struct.radeon_encoder_atom_dac*, align 8
  store %struct.radeon_encoder* %0, %struct.radeon_encoder** %3, align 8
  %7 = load %struct.radeon_encoder*, %struct.radeon_encoder** %3, align 8
  %8 = getelementptr inbounds %struct.radeon_encoder, %struct.radeon_encoder* %7, i32 0, i32 0
  %9 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %8, i32 0, i32 0
  %10 = load %struct.drm_device*, %struct.drm_device** %9, align 8
  store %struct.drm_device* %10, %struct.drm_device** %4, align 8
  %11 = load %struct.drm_device*, %struct.drm_device** %4, align 8
  %12 = getelementptr inbounds %struct.drm_device, %struct.drm_device* %11, i32 0, i32 0
  %13 = load %struct.radeon_device*, %struct.radeon_device** %12, align 8
  store %struct.radeon_device* %13, %struct.radeon_device** %5, align 8
  %14 = load i32, i32* @GFP_KERNEL, align 4
  %15 = call %struct.radeon_encoder_atom_dac* @kzalloc(i32 4, i32 %14)
  store %struct.radeon_encoder_atom_dac* %15, %struct.radeon_encoder_atom_dac** %6, align 8
  %16 = load %struct.radeon_encoder_atom_dac*, %struct.radeon_encoder_atom_dac** %6, align 8
  %17 = icmp ne %struct.radeon_encoder_atom_dac* %16, null
  br i1 %17, label %19, label %18

18:                                               ; preds = %1
  store %struct.radeon_encoder_atom_dac* null, %struct.radeon_encoder_atom_dac** %2, align 8
  br label %25

19:                                               ; preds = %1
  %20 = load %struct.radeon_device*, %struct.radeon_device** %5, align 8
  %21 = call i32 @radeon_atombios_get_tv_info(%struct.radeon_device* %20)
  %22 = load %struct.radeon_encoder_atom_dac*, %struct.radeon_encoder_atom_dac** %6, align 8
  %23 = getelementptr inbounds %struct.radeon_encoder_atom_dac, %struct.radeon_encoder_atom_dac* %22, i32 0, i32 0
  store i32 %21, i32* %23, align 4
  %24 = load %struct.radeon_encoder_atom_dac*, %struct.radeon_encoder_atom_dac** %6, align 8
  store %struct.radeon_encoder_atom_dac* %24, %struct.radeon_encoder_atom_dac** %2, align 8
  br label %25

25:                                               ; preds = %19, %18
  %26 = load %struct.radeon_encoder_atom_dac*, %struct.radeon_encoder_atom_dac** %2, align 8
  ret %struct.radeon_encoder_atom_dac* %26
}

declare dso_local %struct.radeon_encoder_atom_dac* @kzalloc(i32, i32) #1

declare dso_local i32 @radeon_atombios_get_tv_info(%struct.radeon_device*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
